2002-03-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-type-utils.h: New file to contain some more-friendly
	type-cast macros around the glib2 ones.

	* gmime-stream.[c,h]: Now subclasses GObject. Not sure if I got
	everything right, but I think it's mostly there?

2002-03-15  Charles Kerr <charles@rebelbase.com>

	* gmime-filter-charset.c: fixed minor compiler warnings.
	* gmime-iconv-utils.c: same.
	* test-html.c: same.
	* test-iconv.c: same.
	* test-mime.c: same.
	* test-streams.c: same.

2002-03-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_uudecode_step): Fixed a logic
	mistake. All is good now in the land of UU :-)

2002-03-15  Charles Kerr <charles@rebelbase.com>

	Syncing up with small changes from Pan...

	* gmime-content-type.c: remove unused #include <alloca.h>
	* gmime-message.c: same.
	* gmime-part.c: same.
	* internet-address.c: same.

	* gmime-filter-basic.c: add #include <string.h> (strncmp)
	* gmime-filter-yenc.c: add #include <string.h> (strncmp)
	* gmime-iconv-utils.c: add #include <string.h> (strlen)
	* gmime-iconv.c: add #include <string.h> (strlen)
	* gmime-iconv.c: add #include <stdio.h> (sprintf)
	
2002-03-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c (filter_reset): Added a switch-statement
	based on direction. Yes, for now the INIT state for encode/decode
	are both the same but this may change? Probably not but oh well
	:-)
	(g_mime_ydecode_step): Sync up with Charles' yenc fixes.

2002-03-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c: Compile fixes.

2002-03-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c (g_mime_filter_yenc_get_pcrc): Finalize the
	crc before returning.
	(g_mime_filter_yenc_get_crc): Same.

2002-03-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-yenc.c: New filter to encode/decode yEnc streams.

2002-03-03  Jeffrey Stedfast  <fejj@ximian.com>

	Thanks to Carlos Morgado <chbm@chbm.nu>

	* gmime.spec.in: Fix.
